--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3.9"
 services:
   db:
     image: mysql:5.7
+    ports: 
+      - "3306:3306"
     volumes:
       - ./data/db:/var/lib/mysql
       - ./data/seed:/docker-entrypoint-initdb.d
