--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
       "wpackagist-plugin/litespeed-cache":"4.*.*.*",
       "wpackagist-plugin/blocks-animation":"1.*.*",
       "wpackagist-plugin/woocommerce": "6.*.*",
-      "wpackagist-plugin/export-media-with-selected-content":"2.*.*"
+      "wpackagist-plugin/export-media-with-selected-content":"2.*.*",
+      "wpackagist-plugin/kadence-blocks":"2.*.*",
+      "wpackagist-plugin/ultimate-addons-for-gutenberg":"1.*.*"
     },
     "repositories": [
       {
