--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
       WORDPRESS_DB_USER: wordpress
       WORDPRESS_DB_PASSWORD: wordpress
       WORDPRESS_DB_NAME: wordpress
+      WORDPRESS_SITEURL: http://localhost:8000
+      WORDPRESS_HOME: http://localhost:8000
 volumes:
   db_data: {}
   wordpress_data: {}
