update to use DNSMASQ for .test local dev

--- a/web/.env.local
+++ b/web/.env.local
@@ -5,6 +5,6 @@ WORDPRESS_DB_PASSWORD=wordpress
 WORDPRESS_DB_HOST=localhost
 WORDPRESS_TABLE_PREFIX=wp_
 
-WORDPRESS_HOME=http://localhost:8000
-WORDPRESS_SITEURL=http://localhost:8000
+WORDPRESS_HOME=http://projecttitle.test
+WORDPRESS_SITEURL=http://projecttitle.test
 WORDPRESS_DEBUG=true
