--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       MYSQL_DATABASE: wordpress
       MYSQL_USER: wordpress
       MYSQL_PASSWORD: wordpress
+      UPLOAD_LIMIT: 64M
     
   wordpress:
     depends_on:
@@ -22,15 +23,19 @@ services:
     volumes:
       - ./web:/var/www/html
     ports:
-      - "8000:80"
+      - "80:80"
     restart: always
     environment:
       WORDPRESS_DB_HOST: db
       WORDPRESS_DB_USER: wordpress
       WORDPRESS_DB_PASSWORD: wordpress
       WORDPRESS_DB_NAME: wordpress
-      WORDPRESS_SITEURL: http://localhost:8000
-      WORDPRESS_HOME: http://localhost:8000
+      WORDPRESS_SITEURL: http://projecttitle.test
+      WORDPRESS_HOME: http://projecttitle.test
+    networks:
+      default:
+        aliases:
+          - projecttitle.test
 volumes:
   db_data: {}
   wordpress_data: {}
