updated deployments to remove un needed files

--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -26,7 +26,7 @@ jobs:
     - name: Deploy to Live server
       uses: burnett01/rsync-deployments@5.2
       with:
-        switches: -avzr --exclude="data" --exclude=".git" --exclude=".github"
+        switches: -avzr --exclude="data" --exclude=".git" --exclude=".github" --exclude=".gitignore" --exclude="composer.json" --exclude="composer.lock" --exclude="docker-compose.yml" --exclude="LICENSE" --exclude="README.md" --exclude="web/.env.local"
         remote_path: ${{ secrets.DEV_TARGET_LIVE }}
         remote_host: ${{ secrets.DEV_HOST }}
         remote_port: ${{ secrets.DEV_PORT }}
