--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     image: wordpress:latest
     volumes:
       - ./web:/var/www/html
+    # - ../theme:/var/www/html/wp-content/themes/THEMENAME
     ports:
       - "80:80"
     restart: always
