update commit instructions

--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -26,9 +26,16 @@ jobs:
     - name: Deploy to Live server
       uses: burnett01/rsync-deployments@5.2
       with:
-        switches: -avzr --exclude="data" --exclude=".git" --exclude=".github" --exclude=".gitignore" --exclude="composer.json" --exclude="composer.lock" --exclude="docker-compose.yml" --exclude="LICENSE" --exclude="README.md" --exclude="web/.env.local"
-        remote_path: ${{ secrets.DEV_TARGET_LIVE }}
+        switches: -avzr --exclude="data" --exclude=".git" --exclude=".github" --exclude=".gitignore" --exclude="composer.json" --exclude="composer.lock" --exclude="docker-compose.yml" --exclude="LICENSE" --exclude="README.md" --exclude="web/.env.local" --exclude="package-lock.json" --exclude="node_modules" 
+        #File Path from SSH default login directory - e.g. username/DEV_TARGET
+        remote_path: ${{ secrets.DEV_TARGET }}
+        #SSH IP address
         remote_host: ${{ secrets.DEV_HOST }}
+        #SSH Port
         remote_port: ${{ secrets.DEV_PORT }}
+        #SSH Username
         remote_user: ${{ secrets.DEV_USER }}
+        #SSH Private Key
         remote_key: ${{ secrets.DEV_DEPLOY_KEY }}
+        #SSH Key Passphrase
+        remote_key_pass: ${{ secrets.DEV_PASS }}
